--- a/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -13,6 +13,13 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="We're making progress!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TO7-bq-l14">
+                                <rect key="frame" x="0.0" y="160" width="320" height="114"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                <color key="textColor" red="0.070588235289999995" green="0.43529411759999997" blue="0.53725490200000003" alpha="1" colorSpace="deviceRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <view contentMode="scaleToFill" id="Cpf-Qa-Y2s">
                                 <rect key="frame" x="0.0" y="40" width="320" height="122"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -33,7 +40,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="1:08:23" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" id="eQf-Pf-xzs">
-                                        <rect key="frame" x="20" y="22" width="188" height="56"/>
+                                        <rect key="frame" x="20" y="27" width="188" height="56"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="55"/>
                                         <color key="textColor" red="0.050980392156862744" green="0.14117647058823529" blue="0.24313725490196078" alpha="1" colorSpace="calibratedRGB"/>
@@ -50,7 +57,7 @@
                                 <color key="backgroundColor" red="0.070588235294117646" green="0.43529411764705883" blue="0.53725490196078429" alpha="0.10000000000000001" colorSpace="calibratedRGB"/>
                             </view>
                             <view contentMode="scaleToFill" id="B3i-zO-6Q7">
-                                <rect key="frame" x="0.0" y="160" width="321" height="123"/>
+                                <rect key="frame" x="0.0" y="160" width="321" height="114"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="LAST CONTRACTION" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="eJG-KD-7GQ">
@@ -275,6 +282,7 @@
                         <outlet property="frequencyLabel" destination="37G-V5-0Jc" id="7ls-gB-Uf3"/>
                         <outlet property="frequencyTitleLabel" destination="OR3-nF-D60" id="Y6h-RM-xiV"/>
                         <outlet property="historyContainerView" destination="MYH-zI-WdJ" id="N64-tb-a2V"/>
+                        <outlet property="inspirationalLabel" destination="TO7-bq-l14" id="DY1-fM-EAw"/>
                         <outlet property="intensityLabel" destination="HNB-kZ-NCc" id="1Lw-Uo-C9h"/>
                         <outlet property="intensityTitleLabel" destination="M69-PE-W5a" id="xPZ-sJ-l6z"/>
                         <outlet property="lastContractionContainerView" destination="B3i-zO-6Q7" id="HV6-UQ-ikr"/>
@@ -915,12 +923,94 @@
         <image name="save-changes-button.png" width="163" height="46"/>
         <image name="start-button.png" width="61" height="81"/>
     </resources>
+    <classes>
+        <class className="BCAveragesViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCAveragesViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="averageLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="averagesScrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="fifteenMinuteDuration" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="fifteenMinuteFrequency" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="fifteenMinuteIntensity" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="fifteenMinuteNumberLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="minuteNumberScrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="oneHourDuration" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="oneHourFrequency" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="oneHourIntensity" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="pageControl" candidateClass="BCPageControl"/>
+                <relationship kind="outlet" name="sixtyMinuteNumberLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="thirtyMinuteDuration" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="thirtyMinuteFrequency" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="thirtyMinuteIntensity" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="thirtyMinuteNumberLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BCBaseViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCBaseViewController.h"/>
+        </class>
+        <class className="BCContractionCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCContractionCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="intensityLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BCContractionEditViewController" superclassName="BCBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCContractionEditViewController.h"/>
+        </class>
+        <class className="BCFrequencyCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCFrequencyCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="frequencyLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BCHistoryViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCHistoryViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="contractionHistoryLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="contractionIntensityContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="contractionSlideOut" candidateClass="UIView"/>
+                <relationship kind="outlet" name="contractionTableView" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="durationHeaderLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="frequencyHeaderLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="frequencyTableView" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="headerContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="intensityHeaderLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="selectedContractionHandle" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="BCPageControl" superclassName="UIPageControl">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCPageControl.h"/>
+        </class>
+        <class className="BCRootViewController" superclassName="BCBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCRootViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="averagesContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="durationTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="frequencyLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="frequencyTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="historyContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="intensityLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="intensityTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="lastContractionContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="lastContractionHandle" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="lastContractionIntensityContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="lastContractionLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="lastContractionSlideOut" candidateClass="UIView"/>
+                <relationship kind="outlet" name="nextContractionEstimateLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="startStopButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="timerBackgroundView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="timerLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="gHv-HP-DCe"/>
+        <segue reference="wFg-P6-rVT"/>
     </inferredMetricsTieBreakers>
 </document>
