--- a/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -10,7 +10,7 @@
             <objects>
                 <viewController id="QqC-Gy-unH" customClass="BCRootViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UTM-Kr-pAn">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="We're making progress!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TO7-bq-l14">
@@ -268,7 +268,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </containerView>
                             <containerView contentMode="scaleToFill" id="MYH-zI-WdJ">
-                                <rect key="frame" x="0.0" y="368" width="320" height="180"/>
+                                <rect key="frame" x="0.0" y="368" width="320" height="92"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </containerView>
@@ -516,7 +516,7 @@
             <objects>
                 <viewController id="07H-zW-wPl" customClass="BCContractionEditViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="z8S-Wh-Ku3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Edit Contraction" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="s7k-Ja-VZg">
@@ -557,9 +557,43 @@
                                     <action selector="savePressed:" destination="07H-zW-wPl" eventType="touchUpInside" id="7a3-8U-Nu3"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Start Time" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="P6z-Al-hkZ">
+                                <rect key="frame" x="20" y="79" width="126" height="39"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                                <color key="textColor" red="0.070588235289999995" green="0.43529411759999997" blue="0.53725490200000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Duration" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="l5m-Xe-vPj">
+                                <rect key="frame" x="20" y="150" width="126" height="39"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                                <color key="textColor" red="0.070588235289999995" green="0.43529411759999997" blue="0.53725490200000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="1:10 " textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" id="qOp-gR-Ydr">
+                                <rect key="frame" x="164" y="72" width="134" height="54"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="1:10 " textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="GtB-Bj-eQC">
+                                <rect key="frame" x="164" y="143" width="134" height="54"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="27"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.74901960784313726" green="0.8784313725490196" blue="0.88627450980392153" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="durationLabel" destination="GtB-Bj-eQC" id="DPy-9M-4ec"/>
+                        <outlet property="durationTitleLabel" destination="l5m-Xe-vPj" id="Ua5-LA-dLp"/>
+                        <outlet property="startTimeLabel" destination="qOp-gR-Ydr" id="aOo-TW-0aU"/>
+                        <outlet property="startTimeTitleLabel" destination="P6z-Al-hkZ" id="8Xy-jE-d4g"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="El5-CT-CL1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -570,11 +604,11 @@
             <objects>
                 <viewController storyboardIdentifier="HistoryController" id="2ls-d1-09R" customClass="BCHistoryViewController" sceneMemberID="viewController">
                     <view key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="fBf-4M-VjT">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="54" sectionHeaderHeight="22" sectionFooterHeight="22" id="Yrp-bY-iza">
-                                <rect key="frame" x="0.0" y="41" width="197" height="507"/>
+                                <rect key="frame" x="0.0" y="41" width="197" height="419"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -629,7 +663,7 @@
                                 </connections>
                             </tableView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="54" sectionHeaderHeight="22" sectionFooterHeight="22" id="Sla-Gh-2o1">
-                                <rect key="frame" x="197" y="41" width="123" height="507"/>
+                                <rect key="frame" x="197" y="41" width="123" height="419"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -957,6 +991,14 @@
         </class>
         <class className="BCContractionEditViewController" superclassName="BCBaseViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCContractionEditViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelPressed:"/>
+                <relationship kind="action" name="savePressed:"/>
+                <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="durationTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="startTimeLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="startTimeTitleLabel" candidateClass="UILabel"/>
+            </relationships>
         </class>
         <class className="BCFrequencyCell" superclassName="UITableViewCell">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCFrequencyCell.h"/>
@@ -967,6 +1009,8 @@
         <class className="BCHistoryViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCHistoryViewController.h"/>
             <relationships>
+                <relationship kind="action" name="deleteSelectedContraction:"/>
+                <relationship kind="action" name="selectedContractionIntensityPressed:" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="contractionHistoryLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="contractionIntensityContainerView" candidateClass="UIView"/>
                 <relationship kind="outlet" name="contractionSlideOut" candidateClass="UIView"/>
@@ -985,12 +1029,16 @@
         <class className="BCRootViewController" superclassName="BCBaseViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCRootViewController.h"/>
             <relationships>
+                <relationship kind="action" name="deleteLastContraction:"/>
+                <relationship kind="action" name="lastContractionIntensityPressed:" candidateClass="UIButton"/>
+                <relationship kind="action" name="startStopContraction:"/>
                 <relationship kind="outlet" name="averagesContainerView" candidateClass="UIView"/>
                 <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="durationTitleLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="frequencyLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="frequencyTitleLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="historyContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="inspirationalLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="intensityLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="intensityTitleLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="lastContractionContainerView" candidateClass="UIView"/>
@@ -1008,7 +1056,7 @@
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="wFg-P6-rVT"/>
