--- a/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -272,6 +272,21 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </containerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="0ya-54-ZtW">
+                                <rect key="frame" x="259" y="406" width="50" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" image="settings.png">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="TNv-YC-mTa" kind="modal" identifier="Settings" modalTransitionStyle="flipHorizontal" id="2x2-Cf-BeI"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -291,6 +306,7 @@
                         <outlet property="lastContractionLabel" destination="eJG-KD-7GQ" id="Rky-00-gGz"/>
                         <outlet property="lastContractionSlideOut" destination="KYF-Bj-iAR" id="nNB-fL-idW"/>
                         <outlet property="nextContractionEstimateLabel" destination="Dt8-Gn-Lyq" id="Yur-zC-g4I"/>
+                        <outlet property="settingsButton" destination="0ya-54-ZtW" id="x1h-vZ-I7l"/>
                         <outlet property="startStopButton" destination="5fc-QZ-lLx" id="Ys9-Xr-fad"/>
                         <outlet property="timerBackgroundView" destination="Cpf-Qa-Y2s" id="Ga9-c9-tVw"/>
                         <outlet property="timerLabel" destination="eQf-Pf-xzs" id="D3e-vM-FDj"/>
@@ -300,6 +316,38 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QOl-Qn-9I6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-34" y="61"/>
+        </scene>
+        <!--Settings View Controller-->
+        <scene sceneID="Zje-Ok-nYe">
+            <objects>
+                <viewController id="jfq-kF-nIF" customClass="BCSettingsViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Jjs-yt-mvt">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="J3u-LX-d62">
+                                <rect key="frame" x="238" y="20" width="62" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Done">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="doneButtonPressed:" destination="jfq-kF-nIF" eventType="touchUpInside" id="vYI-00-UqM"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="9PL-hU-aV6"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CCE-ly-pSA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1167" y="619"/>
         </scene>
         <!--Averages View Controller-->
         <scene sceneID="nPn-pg-hfA">
@@ -509,7 +557,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ir5-eB-E1e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-34" y="769"/>
+            <point key="canvasLocation" x="649" y="1309"/>
         </scene>
         <!--Contraction Edit View Controller-->
         <scene sceneID="0Ws-Pf-X9I">
@@ -605,7 +653,7 @@
                                     <!--2013-07-26 05:26:48 +0000-->
                                 </date>
                                 <timeZone key="timeZone" name="America/Los_Angeles">
-                                    <mutableData key="data">
+                                    <data key="data">
 VFppZgAAAAAAAAAAAAAAAAAAAAAAAAAEAAAABAAAAAAAAAC5AAAABAAAABCepkign7sVkKCGKqChmveQ
 y4kaoNIj9HDSYSYQ1v50INiArZDa/tGg28CQENzes6DdqayQ3r6VoN+JjpDgnneg4WlwkOJ+WaDjSVKQ
 5F47oOUpNJDmR1gg5xJREOgnOiDo8jMQ6gccIOrSFRDr5v4g7LH3EO3G4CDukdkQ76/8oPBxuxDxj96g
@@ -623,7 +671,7 @@ f5gqkAABAAECAwEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEA
 AQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEA
 AQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEA
 AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
-</mutableData>
+</data>
                                 </timeZone>
                             </datePicker>
                         </subviews>
@@ -641,7 +689,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="El5-CT-CL1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="485" y="-417"/>
+            <point key="canvasLocation" x="629" y="9"/>
         </scene>
         <!--History View Controller-->
         <scene sceneID="UIm-IZ-qPZ">
@@ -983,7 +1031,25 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X7B-vY-eBZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-34" y="997"/>
+            <point key="canvasLocation" x="-34" y="729"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="mJH-8N-SxH">
+            <objects>
+                <navigationController navigationBarHidden="YES" id="TNv-YC-mTa" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5RV-IF-ulF">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="jfq-kF-nIF" kind="relationship" relationship="rootViewController" id="GHE-pK-ViH"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XTe-mU-MNP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="641" y="619"/>
         </scene>
     </scenes>
     <resources>
@@ -999,6 +1065,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <image name="orange-handle.png" width="26" height="44"/>
         <image name="orange-trash.png" width="22" height="30"/>
         <image name="save-changes-button.png" width="163" height="46"/>
+        <image name="settings.png" width="41" height="42"/>
         <image name="start-button.png" width="61" height="81"/>
     </resources>
     <classes>
@@ -1036,6 +1103,8 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <class className="BCContractionEditViewController" superclassName="BCBaseViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCContractionEditViewController.h"/>
             <relationships>
+                <relationship kind="action" name="cancelPressed:"/>
+                <relationship kind="action" name="savePressed:"/>
                 <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="durationPickerView" candidateClass="UIPickerView"/>
                 <relationship kind="outlet" name="durationTitleLabel" candidateClass="UILabel"/>
@@ -1054,6 +1123,8 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <class className="BCHistoryViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCHistoryViewController.h"/>
             <relationships>
+                <relationship kind="action" name="deleteSelectedContraction:"/>
+                <relationship kind="action" name="selectedContractionIntensityPressed:" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="contractionHistoryLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="contractionIntensityContainerView" candidateClass="UIView"/>
                 <relationship kind="outlet" name="contractionSlideOut" candidateClass="UIView"/>
@@ -1072,6 +1143,9 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <class className="BCRootViewController" superclassName="BCBaseViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCRootViewController.h"/>
             <relationships>
+                <relationship kind="action" name="deleteLastContraction:"/>
+                <relationship kind="action" name="lastContractionIntensityPressed:" candidateClass="UIButton"/>
+                <relationship kind="action" name="startStopContraction:"/>
                 <relationship kind="outlet" name="averagesContainerView" candidateClass="UIView"/>
                 <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="durationTitleLabel" candidateClass="UILabel"/>
@@ -1087,9 +1161,16 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                 <relationship kind="outlet" name="lastContractionLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="lastContractionSlideOut" candidateClass="UIView"/>
                 <relationship kind="outlet" name="nextContractionEstimateLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="settingsButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="startStopButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="timerBackgroundView" candidateClass="UIView"/>
                 <relationship kind="outlet" name="timerLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BCSettingsViewController" superclassName="BCBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCSettingsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="doneButtonPressed:"/>
             </relationships>
         </class>
     </classes>
